--- a/echo-app/package.json
+++ b/echo-app/package.json
@@ -18,5 +18,12 @@
         "lodash": "^4.17.5",
         "popper.js": "^1.12",
         "vue": "^2.5.17"
+    },
+    "dependencies": {
+        "ajv": "^6.0.0",
+        "imagemin": "^5.0.0",
+        "img-loader": "^3.0.1",
+        "laravel-echo": "^1.4.1",
+        "pusher-js": "^4.3.1"
     }
 }
